--- a/scss/_color.scss
+++ b/scss/_color.scss
@@ -1,5 +1,5 @@
 $color_main: white;
-$color_secondary: rgb(90, 90, 90);
+$color_secondary: #7168c1;
 $color_font_dark: black;
-$color_button:rgb(146, 130, 238);
-$color_button_hover:rgb(203, 197, 240);
+$color_button:#282144;
+$color_button_hover:#282144;
