--- a/scss/_font.scss
+++ b/scss/_font.scss
@@ -1,36 +1,37 @@
 @use 'sass:map';
 @use 'color';
 
-$font_name:Verdana; 
+$font_name_title:Minion Variable Concept;
+$font_name_paragraph:Inter; 
 
 $list_fonts:(
     ("name":"p",
-    "font-family":$font_name,
+    "font-family":$font_name_paragraph,
     "font-size":1rem,
     "font-weight":normal,
     "color":color.$color_font_dark)
 
     ("name":".description",
-    "font-family":$font_name,
+    "font-family":$font_name_paragraph,
     "font-size":0.75rem,
     "font-weight":normal,
     "color":color.$color_main)
 
     ("name":"h3",
-    "font-family":$font_name,
+    "font-family":$font_name_paragraph,
     "font-size":1.5rem,
     "font-weight":normal,
     "color":color.$color_button_hover)
 
     ("name":"h2",
-    "font-family":$font_name,
-    "font-size":1.75rem,
+    "font-family":$font_name_paragraph,
+    "font-size":2rem,
     "font-weight":normal,
     "color":color.$color_font_dark)
     
     ("name":"h1",
-    "font-family":$font_name,
-    "font-size":2rem,
+    "font-family":$font_name_paragraph,
+    "font-size":2.5rem,
     "font-weight":400,
     "color":color.$color_button_hover)
 );
