--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,6 +22,7 @@ header {
     background-color: color.$color_secondary;
 }
 
+
 .bar {
     margin : 40px 0px 40px 0px;
     height: 5px;
@@ -31,6 +32,10 @@ header {
 
 #presentation {
     padding:  0% 3% 0% 3%;
+    
+    p {
+        margin-bottom: -20px;
+    }
 }
 
 #section_formation {
@@ -73,11 +78,12 @@ header {
     display:flex;
     flex-direction: column;
     width: 250px;
-    background-color: rgb(248, 236, 221);
+    border: 4px color.$color_secondary solid;
     margin-bottom: 75px;
+    border-radius: 15px;
 
     p {
-        font-size: 0.65em;
+        font-size: 0.75em;
     }
 
     img {
