--- a/scss/style.css
+++ b/scss/style.css
@@ -42,10 +42,6 @@ header {
   background-color: #7168c1;
 }
 
-h2 {
-  align-self: center;
-}
-
 .bar {
   margin: 40px 0px 40px 0px;
   height: 5px;
@@ -120,29 +116,26 @@ h2 {
 }
 
 .description_service {
-  padding: 2% 0% 2% 0%;
+  padding: 20px 0px 20px 0px;
+}
+
+#services {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+#services img {
+  width: 25em;
+  height: auto;
+}
+
+#list_services {
+  width: 50%;
+}
+
+#div_mockup {
   width: 40%;
-}
-
-.section_project {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 350px;
-  margin-bottom: 5%;
-  background-color: #7168c1;
-  border: 10px #7168c1 solid;
-}
-
-.section_langage {
-  padding: 0% 5% 0% 5%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.project_content {
-  padding: 0% 5% 0% 5%;
 }
 
 .box_cta {
