--- a/scss/style.css
+++ b/scss/style.css
@@ -119,6 +119,14 @@ header {
   padding: 20px 0px 20px 0px;
 }
 
+.title_service {
+  width: 200px;
+  height: 50px;
+  padding: 2%;
+  border-radius: 25px;
+  background-color: #7168c1;
+}
+
 #services {
   display: flex;
   flex-direction: row;
@@ -131,11 +139,17 @@ header {
 }
 
 #list_services {
-  width: 50%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 #div_mockup {
-  width: 40%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .box_cta {
