--- a/scss/style.scss
+++ b/scss/style.scss
@@ -101,6 +101,14 @@ header {
     padding : 20px 0px 20px 0px;
 }
 
+.title_service {
+    width: 200px;  
+    height: 50px;
+    padding: 2%;
+    border-radius: 25px;
+    background-color: color.$color_secondary;
+}
+
 #services {
     display:flex;
     flex-direction: row;
@@ -115,11 +123,18 @@ header {
 }
 
 #list_services {
-    width:50%;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 #div_mockup {
-    width:40%;
+    // width:40%;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;   
 }
 
 .box_cta {
