--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 p, .cta {
   font-family: Inter;
   font-size: 1rem;
@@ -120,10 +121,21 @@ header {
 }
 
 .title_service {
-  width: 200px;
-  height: 50px;
-  padding: 2%;
-  border-radius: 25px;
+  display: inline-block;
+  padding: 3px 6px; /* 3px en haut/bas, 6px à gauche/droite */
+  background-color: #282144;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 5px;
+  padding-top: 30px;
+}
+
+.title_service:hover {
   background-color: #7168c1;
 }
 
@@ -172,10 +184,6 @@ header {
   color: #7168c1;
 }
 
-.container {
-  padding: 0% 3% 0% 3%;
-}/*# sourceMappingURL=style.css.map */
-
 form {
   max-width: 600px;
   margin: 0 auto;
@@ -195,22 +203,22 @@ label {
   font-weight: bold;
 }
 
-input[type="text"],
-input[type="tel"],
-input[type="email"],
+input[type=text],
+input[type=tel],
+input[type=email],
 textarea,
-input[type="file"] {
+input[type=file] {
   width: calc(100% - 10px);
   padding: 8px;
   border-radius: 5px;
   border: 1px solid #ccc;
 }
 
-input[type="file"] {
+input[type=file] {
   padding-top: 6px;
 }
 
-button[type="submit"] {
+button[type=submit] {
   background-color: #007bff;
   color: #fff;
   padding: 10px 20px;
@@ -220,6 +228,10 @@ button[type="submit"] {
   font-size: 16px;
 }
 
-button[type="submit"]:hover {
+button[type=submit]:hover {
   background-color: #0056b3;
 }
+
+.container {
+  padding: 0% 3% 0% 3%;
+}/*# sourceMappingURL=style.css.map */
