--- a/scss/style.scss
+++ b/scss/style.scss
@@ -102,11 +102,22 @@ header {
 }
 
 .title_service {
-    width: 200px;  
-    height: 50px;
-    padding: 2%;
-    border-radius: 25px;
-    background-color: color.$color_secondary;
+    display: inline-block;
+    padding: 3px 6px; /* 3px en haut/bas, 6px à gauche/droite */
+    background-color: #282144;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 5px;
+    padding-top:30px;
+}
+    
+.title_service:hover {
+background-color: #7168c1;
 }
 
 #services {
@@ -152,6 +163,54 @@ header {
     background:color.$color_button_hover;
     color:color.$color_secondary;
 }
+
+form {
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .input-group {
+    margin-bottom: 15px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+  }
+  
+  input[type="text"],
+  input[type="tel"],
+  input[type="email"],
+  textarea,
+  input[type="file"] {
+    width: calc(100% - 10px);
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  input[type="file"] {
+    padding-top: 6px;
+  }
+  
+  button[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  button[type="submit"]:hover {
+    background-color: #0056b3;
+  }
 
 .container {
     padding: 0% 3% 0% 3%; 
