--- a/scss/style.css
+++ b/scss/style.css
@@ -211,7 +211,7 @@ input[type="file"] {
 }
 
 button[type="submit"] {
-  background-color: #007bff;
+  background-color:  #7168c1;
   color: #fff;
   padding: 10px 20px;
   border: none;
@@ -221,7 +221,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #0056b3;
+  background-color: #282144;
 }
 .title_service {
   display: inline-block;
