--- a/scss/style.css
+++ b/scss/style.css
@@ -146,8 +146,35 @@ header {
   justify-content: space-around;
 }
 #services img {
-  width: 25em;
-  height: auto;
+  width: 28em;
+  height: 18em;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.img_container {
+  position: relative;
+  width: 28em;
+  height: 18em;
+}
+
+.service_image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.content_service {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.service_paragraph {
+  width: 400px;
 }
 
 #list_services {
