--- a/scss/style.scss
+++ b/scss/style.scss
@@ -128,9 +128,35 @@ background-color: #7168c1;
 
 
     img {
-        width: 25em;
-        height:auto;
+        width: 28em;
+        height:18em;
+        object-fit: cover;
     }
+}
+
+.img_container {
+    position: relative;
+    width: 28em;
+    height: 18em;
+}
+
+.service_image {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+}
+
+.content_service {
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.service_paragraph {
+    width: 400px;
 }
 
 #list_services {
