--- a/scss/_color.scss
+++ b/scss/_color.scss
@@ -1,5 +1,5 @@
 $color_main: white;
 $color_secondary: #7168c1;
+$color_font_secondary: #5c51c4;
 $color_font_dark: black;
 $color_button:#282144;
-$color_button_hover:#282144;
