--- a/scss/style.css
+++ b/scss/style.css
@@ -1,39 +1,180 @@
 @charset "UTF-8";
 p, .cta {
-  font-family: Inter;
+  font-family: "assets/fonts/Inter.ttf";
   font-size: 1rem;
   font-weight: normal;
   color: black;
 }
 
 .description {
-  font-family: Inter;
+  font-family: "assets/fonts/Inter.ttf";
   font-size: 0.75rem;
   font-weight: normal;
   color: white;
 }
 
+h4 {
+  font-family: "assets/fonts/Inter.ttf";
+  font-size: 1.25rem;
+  font-weight: normal;
+  color: #282144;
+}
+
 h3 {
-  font-family: Inter;
+  font-family: "assets/fonts/Inter.ttf";
   font-size: 1.5rem;
   font-weight: normal;
   color: #282144;
 }
 
 h2 {
-  font-family: Inter;
+  font-family: "assets/fonts/Inter.ttf";
   font-size: 2rem;
   font-weight: normal;
-  color: black;
+  color: #5c51c4;
 }
 
 h1 {
-  font-family: Inter;
+  font-family: "assets/fonts/Inter.ttf";
   font-size: 2.5rem;
   font-weight: 400;
   color: #282144;
 }
 
+.menu-btn {
+  position: absolute;
+  z-index: 1;
+  right: 1rem;
+  top: 1rem;
+  height: 20px;
+  width: 28px;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+}
+.menu-btn__burger {
+  position: absolute;
+  right: 0;
+  top: 0.5rem;
+  width: 28px;
+  height: 3px;
+  background: black;
+  transition: all 0.5s ease-in-out;
+}
+.menu-btn__burger::before {
+  content: "";
+  position: absolute;
+  top: -8px;
+  width: 28px;
+  height: 3px;
+  background: black;
+  transition: all 0.5s ease-in-out;
+}
+.menu-btn__burger::after {
+  content: "";
+  position: absolute;
+  top: 8px;
+  width: 20px;
+  height: 3px;
+  background: black;
+  transition: all 0.5s ease-in-out;
+}
+.menu-btn__burger.open {
+  transform: rotate(720deg);
+  background: transparent;
+}
+.menu-btn__burger.open::before {
+  transform: rotate(45deg) translate(5px, 8px);
+}
+.menu-btn__burger.open::after {
+  width: 28px;
+  transform: rotate(-45deg) translate(3px, -7px);
+}
+
+.nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 98vw;
+  opacity: 0.98;
+  visibility: hidden;
+}
+.nav.open {
+  visibility: visible;
+}
+.nav .menu-nav {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  background: rgba(117, 109, 128, 0.95);
+  list-style-type: none;
+  padding-right: 1rem;
+  transform: translateY(-100%);
+  transition: all 0.5s ease-in-out;
+}
+.nav .menu-nav.open {
+  transform: translateY(0);
+}
+.nav .menu-nav__item {
+  transform: translateX(100vw);
+  transition: all 0.5s ease-in-out;
+}
+.nav .menu-nav__item.open {
+  transform: translateX(0);
+}
+.nav .menu-nav__link {
+  display: inline-block;
+  font-size: 1rem;
+  text-decoration: none;
+  color: #282144;
+  padding: 2rem 0;
+  font-weight: 300;
+  transition: all 0.5s ease-in-out;
+}
+.nav .menu-nav__link:hover {
+  color: white;
+}
+
+.menu-nav__item:nth-child(1) {
+  transition-delay: 0.2s;
+}
+
+.menu-nav__item:nth-child(2) {
+  transition-delay: 0.3s;
+}
+
+.menu-nav__item:nth-child(3) {
+  transition-delay: 0.4s;
+}
+
+.menu-nav__item:nth-child(4) {
+  transition-delay: 0.5s;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-btn {
+    visibility: hidden;
+  }
+  .nav {
+    visibility: visible;
+  }
+  .nav .menu-nav {
+    display: block;
+    transform: translateY(0);
+    height: 100%;
+    background: transparent;
+    text-align: right;
+  }
+  .nav .menu-nav__item {
+    display: inline;
+    padding-right: 1.5rem;
+  }
+  .nav .menu-nav__link {
+    font-size: 1.5rem;
+  }
+}
 body {
   margin: 0%;
 }
@@ -50,39 +191,35 @@ header {
   background-color: #7168c1;
 }
 
+.bienvenue-entreprise {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.bienvenue-entreprise-text {
+  width: 450px;
+}
+
+.bienvenue-entreprise-img {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.bienvenue-entreprise-img img {
+  width: 21rem;
+  height: 21rem;
+  border-radius: 10.5rem;
+  margin-top: 30px;
+}
+
 #presentation {
   padding: 0% 3% 0% 3%;
 }
 #presentation p, #presentation .cta {
   margin-bottom: -20px;
-}
-
-#section_formation {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  width: 100%;
-}
-
-#formation {
-  padding-left: 3%;
-}
-
-#list_projects {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  width: 100%;
-}
-
-#list_langages {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  width: 100%;
 }
 
 #notre_equipe {
@@ -102,7 +239,10 @@ header {
   border-radius: 15px;
 }
 .equipier p, .equipier .cta {
-  font-size: 0.75em;
+  font-size: 0.85em;
+}
+.equipier h4 {
+  margin-top: -20px;
 }
 .equipier img {
   width: 10em;
@@ -124,7 +264,7 @@ header {
   display: inline-block;
   padding: 3px 6px; /* 3px en haut/bas, 6px à gauche/droite */
   background-color: #282144;
-  color: #fff;
+  color: white;
   border: none;
   border-radius: 5px;
   text-align: center;
@@ -132,7 +272,7 @@ header {
   font-size: 16px;
   cursor: pointer;
   margin: 5px;
-  padding-top: 30px;
+  padding: 10px;
 }
 
 .title_service:hover {
@@ -152,6 +292,13 @@ header {
      object-fit: cover;
 }
 
+.content_service {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .img_container {
   position: relative;
   width: 28em;
@@ -166,29 +313,13 @@ header {
   left: 0;
 }
 
-.content_service {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
 .service_paragraph {
   width: 400px;
+  padding-right: 40px;
 }
 
 #list_services {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-#div_mockup {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  margin: 30px 0px 30px 0px;
 }
 
 .box_cta {
@@ -214,7 +345,7 @@ header {
 form {
   max-width: 600px;
   margin: 0 auto;
-  background-color: #fff;
+  background-color: white;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -245,14 +376,9 @@ input[type=file] {
   padding-top: 6px;
 }
 
-<<<<<<< HEAD
-button[type="submit"] {
-  background-color:  #7168c1;
-=======
 button[type=submit] {
-  background-color: #007bff;
->>>>>>> 08dbc1adf3b69d9524c4ce88bb6045049684ac4a
-  color: #fff;
+  background-color: #282144;
+  color: white;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
@@ -260,21 +386,10 @@ button[type=submit] {
   font-size: 16px;
 }
 
-<<<<<<< HEAD
-button[type="submit"]:hover {
-  background-color: #282144;
-=======
 button[type=submit]:hover {
-  background-color: #0056b3;
->>>>>>> 08dbc1adf3b69d9524c4ce88bb6045049684ac4a
-}
-
-<<<<<<< HEAD
-.title_service:hover {
   background-color: #7168c1;
 }
-=======
+
 .container {
   padding: 0% 3% 0% 3%;
 }/*# sourceMappingURL=style.css.map */
->>>>>>> 08dbc1adf3b69d9524c4ce88bb6045049684ac4a
