--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,14 @@ body {
 
 header {
     padding: 2% 3% 2% 3%;
-    background-color: color.$color_secondary;
+    background-color: color.$color_header;
+}
+
+#image-accueil {
+    img{
+    height:50px;
+    width:auto;
+    }
 }
 
 .bar {
@@ -52,6 +59,27 @@ header {
         @include images(21rem, true);
         margin-top:30px;
     } 
+}
+
+.bulle_text {
+    position: relative;
+    // top: 0;
+    // left: 0;
+    margin-top: -80px;
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 120px;
+    width: 120px;
+    border-radius: 60px;
+    background-color: color.$color_secondary;
+
+    p {
+        text-align: center;
+        padding: 10px;
+        color : color.$color_main;
+    }
 }
 
 #presentation {
@@ -229,5 +257,5 @@ form {
   }
 
 .container {
-    padding: 0% 3% 0% 3%; 
+    padding: 20px 3% 0px 3%; 
   }
