--- a/scss/_color.scss
+++ b/scss/_color.scss
@@ -3,4 +3,4 @@ $color_secondary: #7168c1;
 $color_font_secondary: #5c51c4;
 $color_font_dark: black;
 $color_button:#282144;
-$color_header:#aca2ff;
+$color_header:#bcb5ff;
