--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,7 +28,7 @@ footer {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    padding: 2% 3% 2% 3%;
+    padding: 40px 3% 0px 3%;
     background-color: color.$color_button;
 
     p {
@@ -47,6 +47,19 @@ footer {
     address {
         color:color.$color_main
     }
+}
+
+.footer_section {
+    width: 280px;
+    border-right: color.$color_main 2px solid;
+    margin-bottom: 50px;
+}
+
+
+a {text-decoration: none;}
+
+a:hover {
+    color:color.$color_secondary;
 }
 
 address {
@@ -249,6 +262,10 @@ background-color: color.$color_secondary;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 75px;
     border-radius: 15px;
+
+    p {
+        font-size: 0.85em;
+    }
 }
 
 .user-images {
@@ -370,28 +387,33 @@ form {
     justify-content: space-between;
 }
 
-  .social-medias-icons {
-    height: 50px;
-    width: auto;
-  }
+.social-medias-icons {
+height: 50px;
+width: auto;
+}
 
-  .social-medias-icons:hover {
-    transform: scale(1.2);
-  }
+.social-medias-icons:hover {
+transform: scale(1.2);
+}
 
-  #footer_horaires {
-    display: flex;
-    flex-direction: row;
+.footer_horaires {
+display: flex;
+flex-direction: row;
 
-    p {
-        margin-bottom: -10px;
+p {
+    margin-bottom: -10px;
+}
+}
+
+#nav_footer {
+    ul {
+        list-style-type: none;
+        padding-inline-start: 0%;
     }
-  }
-
-  #nav_footer {
-    ul {list-style-type: none;}
-    li {padding-bottom:25px;}
-  }
+    li {
+        padding-bottom:25px;
+    }
+}
 
 .container {
     padding: 20px 3% 0px 3%; 
