--- a/scss/style.css
+++ b/scss/style.css
@@ -4,6 +4,11 @@
   font-weight: 400;
   src: url("assets/fonts/Inter/static/Inter-Regular.ttf");
 }
+@font-face {
+  font-family: "Concept-Bold";
+  font-weight: 400;
+  src: url("assets/fonts/Concept-Bold/Concept-Bold.ttf");
+}
 p {
   font-family: "Inter";
   font-size: 1rem;
@@ -54,7 +59,7 @@ h3 {
 }
 
 h2 {
-  font-family: "Inter";
+  font-family: "Concept-Bold";
   font-size: 2rem;
   font-weight: normal;
   color: #5c51c4;
@@ -145,7 +150,7 @@ h1 {
 }
 .nav .menu-nav__item {
   transform: translateX(100vw);
-  font-size: 1rem;
+  font-size: 1em;
   font-weight: 300;
   font-family: "Inter";
   transition: all 0.5s ease-in-out;
@@ -156,7 +161,7 @@ h1 {
 .nav .menu-nav__link {
   display: inline-block;
   font-family: "Inter";
-  font-size: 0.75rem;
+  font-size: 1em;
   text-decoration: none;
   color: #282144;
   padding: 2rem 0;
@@ -219,7 +224,7 @@ footer {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 2% 3% 2% 3%;
+  padding: 40px 3% 0px 3%;
   background-color: #282144;
 }
 footer p {
@@ -234,6 +239,20 @@ footer a:hover {
 }
 footer address {
   color: white;
+}
+
+.footer_section {
+  width: 280px;
+  border-right: white 2px solid;
+  margin-bottom: 50px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: #7168c1;
 }
 
 address {
@@ -432,6 +451,9 @@ address {
   margin-bottom: 75px;
   border-radius: 15px;
 }
+.avis p {
+  font-size: 0.85em;
+}
 
 .user-images {
   width: 6em;
@@ -563,16 +585,17 @@ button[type=submit]:hover {
   transform: scale(1.2);
 }
 
-#footer_horaires {
+.footer_horaires {
   display: flex;
   flex-direction: row;
 }
-#footer_horaires p {
+.footer_horaires p {
   margin-bottom: -10px;
 }
 
 #nav_footer ul {
   list-style-type: none;
+  padding-inline-start: 0%;
 }
 #nav_footer li {
   padding-bottom: 25px;
