--- a/scss/style.css
+++ b/scss/style.css
@@ -30,6 +30,13 @@ a {
   color: black;
 }
 
+li {
+  font-family: "Inter";
+  font-size: 1rem;
+  font-weight: normal;
+  color: black;
+}
+
 label {
   font-family: "Inter";
   font-size: 1rem;
@@ -539,7 +546,7 @@ button[type=submit]:hover {
 
 #contact-form {
   width: 800px;
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 #contact-infos {
@@ -602,5 +609,5 @@ button[type=submit]:hover {
 }
 
 .container {
-  padding: 20px 3% 0px 3%;
+  padding: 20px 5% 0px 5%;
 }/*# sourceMappingURL=style.css.map */
