--- a/scss/_font.scss
+++ b/scss/_font.scss
@@ -68,7 +68,7 @@ $list_fonts:(
     ("name":"h2",
     "font-family":$font_name_title,
     "font-size":2rem,
-    "font-weight":normal,
+    "font-weight":600,
     "color":color.$color_font_secondary)
     
     ("name":"h1",
