--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,10 +67,9 @@ address {
 }
 
 #image-accueil {
-    img{
+    margin-top: -20px;
     height:12em;
     width:auto;
-    }
 }
 
 .bar {
@@ -141,6 +140,10 @@ address {
     }
 }
 
+.add_space {
+    margin-top: 50px;
+}
+
 #notre_equipe {
     display:flex;
     flex-direction: row;
@@ -163,6 +166,8 @@ address {
 
     h4 {
         margin-top: -20px;
+        font-size: 1.1em;
+        color: color.$color_secondary;
     }
 
     img {
@@ -363,7 +368,6 @@ form {
   #horaires {
     display: flex;
     flex-direction: row;
-    margin-left: 30px;
     margin-bottom: 50px;
 
     p {
@@ -416,5 +420,5 @@ p {
 }
 
 .container {
-    padding: 20px 5% 0px 5%; 
+    padding: 20px 5% 10px 5%; 
   }
